[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.3"}
pydantic-settings = "^2.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
sqladmin = {extras = ["full"], version = "^0.17.0"}
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
